probably working test version still have some holes in security

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -70,3 +70,7 @@ RUN ln -s /usr/lib/flutter/bin/dart /bin/dart
 # Disable Flutter telemetry
 RUN flutter --disable-analytics
 
+# set display for ssh season
+RUN echo "if [ -f ~/.bashrc ]; then" >> /root/.bashrc
+RUN echo "   export DISPLAY=:0" >> /root/.bashrc
+RUN echo "fi" >> /root/.bashrc
